# enterpolation

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  RELEASES.md  explenation.md
.github/workflows/: ci.yml
benches/: benches.rs
enterpolation_attribute/: Cargo.toml
enterpolation_attribute/src/: lib.rs
enterpolation_attribute/tests/: simple.rs  simples.rs
examples/: bspline_reasoning.rs  gradient.rs  linear.rs  noise.rs  nurbs.rs  plateaus.rs
src/: builder.rs  delayed.rs  experiment.rs  generator.rs  homogeneous.rs  lib.rs  linear.rs  never.rs  real.rs  utils.rs  weighted.rs
src/base/: adaptors.rs  generator.rs  list.rs  mod.rs  signal.rs  space.rs
src/bezier/: bezier_deriative.rs  builder.rs  error.rs  mod.rs
src/bspline/: adaptors.rs  builder.rs  error.rs  mod.rs
src/cbs/: mod.rs
src/easing/: mod.rs  plateau.rs
src/linear/: builder.rs  error.rs  linear_equidistant.rs  mod.rs
src/weights/: homogeneous.rs  mod.rs  weighted.rs  weights.rs
