[package]
name = "enterpolation"
authors = ["Nicolas Klenert <klenert.nicolas@gmail.com>"]
exclude = ["examples/*", ".gitignore", "CHANGELOG.md", "CONTRIBUTING.md"]
edition = "2021"
description = "A library for creating and computing interpolations, extrapolations and smoothing of generic data points."
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/enterpolation"
repository = "https://github.com/NicolasKlenert/enterpolation"
readme = "README.md"
keywords = ["interpolation", "curve", "spline", "bspline", "bezier"]
categories = ["graphics", "mathematics", "no-std"]
version = "0.2.0"

[dependencies]
topology-traits = "0.1.1"
assert_float_eq = "1"
num-traits = {version="0.2", default-features=false}

serde = { version = "1", optional = true, features = ["derive"] }


[dev-dependencies]
# real black box in necessary for accurate benches, but is only available in rust-nightly
criterion = {version = "0.3"}#, features = ["real_blackbox"]}
# we are using palette and image as dependency for our gradient example
palette = "0.6"
image = "0.24"

[features]
default = ["std","linear","bezier","bspline"]
std = ["num-traits/std"]
libm = ["num-traits/libm"]
linear = []
bezier = []
bspline = []

[[bench]]
name = "benches"
harness = false

[[example]]
name = "bspline_reasoning"
path = "examples/bspline_reasoning.rs"
required-features = ["linear","bezier","bspline"]

[[example]]
name = "gradient"
path = "examples/gradient.rs"
required-features = ["bspline"]

[[example]]
name = "linear"
path = "examples/linear.rs"
required-features = ["std","linear"]

[[example]]
name = "noise"
path = "examples/noise.rs"
required-features = ["bspline"]

[[example]]
name = "nurbs"
path = "examples/nurbs.rs"
required-features = ["bspline"]

[[example]]
name = "plateaus"
path = "examples/plateaus.rs"
required-features = ["linear"]

[badges.maintenance]
status = "actively-developed"
