[package]
name = "enterpolation_attribute"
description = "Attribute macro to duplicate an implementation block with the `Result` of that type. This allows chaining results."
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
#extra-traits needed for debugging
syn = {version = "1.0", features = ["full", "fold","extra-traits"]}
quote = "1.0"
